# LoggerCpp

./: .codedocs  .gitignore  .gitmodules  .travis.yml  Authors.md  CMakeLists.txt  LICENSE  LgfFormatter.cpp  LgfStringView.h  Logger.sln  Logger.vcxproj  Logger.vcxproj.filters  README.md  Tasks  appveyor.yml  codefresh.yml  globalConfig.h  premake5.lua  sourceLocation_lgf.h
.circleci/: config.yml
.github/workflows/: developmentCI.yml  gitCI.yml  gitmasterCI.yml
Files_tmp/: configuration.h  forbiddenCopy.h  level.h  levelColor.h  logCore.h  main.cpp  staticBase.h  version.h
SwiFTLog/: main.cpp
SwiFTLog/src/: CMakeLists.txt  main.cpp
app/: main.cpp
cmake/: Doctest.cmake  Fmt.cmake
configFiles/: configLogger.config
docker/: Dockerfile
helper/include/: logifyHelper_lgf.h
helper/src/: logifyHelper_lgf.cpp
include/: LgfFormatter.cpp  LgfFormatter.h  LgfStringView.h  chrono_lgf.h  clock.h  color_lgf.h  configReader_lgf.h  configuration.h  core_lgf.h  cpuCycles_lgf.h  example.h  forbiddenCopy.h  forbiddenCopy_lgf.h  formatter_lgf.h  globalConfig.h  level.h  levelColor.h  levelUtils.h  levelUtils_lgf.h  lgfColor.h  lgfForbiddenCopy.h  lgfLevelUtils.h  lgfLockable.h  lgfStaticBase.h  lgfcore.h  lgftime.h  lockable_lgf.h  logify.h  logifyBuilder_lgf.h  registry_lgf.h  scopeTimer.h  sourceInfo_lgf.h  staticBase.h  staticBase_lgf.h  stringView_lgf.h  version.h
include/interface/: iConfigReader_lgf.h
scripts/Fmt/: buildFmt.bat
scripts/Premake/: runPremakeVS2013.bat  runPremakeVS2015 .bat  runPremakeVS2017.bat  runPremakeVS2019.bat
src/: LgfStringView.cpp  chrono_lgf.cpp  clock.cpp  configReader_lgf.cpp  example.cpp  formatter_lgf.cpp  levelUtils.cpp  levelUtils_lgf.cpp  lgfLevelUtils.cpp  lgfLockable.cpp  lgfTime.cpp  lockable_lgf.cpp  logify.cpp  main.cpp  registry_lgf.cpp  sourceInfo_lgf.cpp
tests/: CMakeLists.txt  logifyBuilder_lgf_test.cpp
tests/include/: logifyBuilder_lgf_test.h
